# haskell-regex-nfa

./: .gitignore  Compiler.hs  LICENSE  Main.hs  README.md  Regex-NFA.cabal  Regex.hs  pyregex.py  run.sh
src/Data/: Match.hs  NFA.hs
src/Text/Regex/: NFA.hs
src/Text/Regex/NFA/: Compiler.hs  Regex.hs
tests/: Main.hs
